--- a/MyWebSite/index.html
+++ b/MyWebSite/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
         h2 { font-size: 50px; }
-        body { text-align:center; font: 20px Helvetica, sans-serif; color: #333; background:green; }
+        body { text-align:center; font: 20px Helvetica, sans-serif; color: yellow; background:blue; }
         </style>
     </head>
     <body >
